# ml-multiple-futures-prediction

./: ACKNOWLEDGEMENTS  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
multiple_futures_prediction/: __init__.py  dataset_ngsim.py  model_ngsim.py  my_utils.py  train_ngsim.py
multiple_futures_prediction/assets/: __init__.py
multiple_futures_prediction/cmd/: train_ngsim_cmd.py
multiple_futures_prediction/configs/: mfp2_ngsim.gin
